# LangOps

./: .coveragerc  .env.template  .gitignore  CHANGELOG.md  Dockerfile.langops.docs  Makefile  README.md  docker-compose.docs.yml  index.md  mkdocs.yml  pyproject.toml  requirements.docs.txt  requirements.txt  tmp_regex_test.py
.github/workflows/: build.yml  docs.yml  tests.yml
agentops/: __init__.py
agentops/alert/: __init__.py
agentops/llm/: __init__.py  base.py  openai_llm.py  type.py
agentops/parser/: __init__.py  base.py  error_parser.py
agentops/prompt/: __init__.py  base.py  constants.py  jenkins_error_prompt.py  type.py
demo/: openai_llm_demo.py
demo/data/: jenkins_logs.txt
demo/examples/: analysis_basic_error_logs.py  analysis_jenkins_errors.py  analysis_jenkins_json.py  analysis_jenkins_logs.py
demo/llm/: openai_llm_demo.py
demo/parser/: jenkins_parser_demo.py  pipeline_parser_demo.py  test_jenkins_parser_enhanced.py
docs/: CODE_OF_CONDUCT.md  README-Docker.md
docs/agentops/alert/: README.md  base.md  registry.md
docs/agentops/llm/: README.md  base.md  openai_llm.md  registry.md
docs/agentops/parser/: README.md  error_parser.md  registry.md
docs/agentops/prompt/: README.md  base.md  constants.md  jenkins_error_prompt.md  registry.md  type.md
docs/contributing/: development.md  testing.md
docs/getting-started/: quick-start.md
docs/langops/alert/: README.md  index.md  registry.md
docs/langops/core/: base_alert.md  base_llm.md  base_parser.md  base_prompt.md  constants.md  index.md  types.md
docs/langops/llm/: index.md  openai_llm.md  registry.md  type.md
docs/langops/parser/: baseparser.md  error_parser.md  index.md  jenkins_parser.md  jenkins_patterns.md  pipeline_parser.md  registry.md
docs/langops/prompt/: constants.md  index.md  jenkins_error_prompt.md  registry.md
docs/parser/: IMPROVEMENTS_SUMMARY.md  jenkins_json_integration.md
docs/stylesheets/: extra.css
getting-started/: installation.md
langops/alert/: registry.py
langops/core/: base_alert.py  base_llm.py  base_parser.py  base_prompt.py
langops/llm/: openai_llm.py  registry.py
langops/parser/: __init__.py  error_parser.py  jenkins_parser.py  jenkins_patterns.py  pipeline_parser.py  registry.py
langops/parser/constants/: __init__.py  pipeline_constants.py
langops/parser/patterns/: __init__.py  azure_devops.py  common.py  github_actions.py  gitlab_ci.py  jenkins.py
langops/parser/types/: __init__.py  pipeline_types.py
langops/parser/utils/: __init__.py  extractors.py  resolver.py  stage_cleaner.py
langops/prompt/: jenkins_error_prompt.py  registry.py
tests/agentops/alert/: test_base.py  (+1 more)
(+42 files in other folders)
